Bytt ut baseimage til eclipse-temurin:17 og debian:buster-slim